assets/css/style.css
/* Google Fonts import */
@import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&family=Inconsolata:wght@200..900&display=swap');


/* Asterisk wildcard selector to override default browser styles */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* General styles */
body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    /* Generic project styles */
    color: #fff;
    font-family: "Inconsolata", monospace;
    font-size: 1rem;
}

/* Header styles */
header {
    color: #424040;
    padding-left: 1rem;
    position: relative;
    z-index: 50;
    width: 100%;
    display: flex;
    justify-content: flex-start;
    align-items: baseline;
}

a {
    text-decoration: none;
    color: #424040;
}

h1,
h2,
h3 {
    font-family: "Karla", sans-serif;
}

h2 {
    margin: 2rem 1rem 1rem;
}


#menu {
    display: flex;
    font-size: 110%;
    letter-spacing: 2px;
    list-style-type: none;
    padding-top: 8px;
}

#menu>li {
    margin-bottom: 0.7em;
    padding-right: 1rem;
}

.active {
    border-bottom: 1px solid #424040;
}

/* Sticky navbar styles */
nav {
    position: sticky;
    top: 0;
    background-color: #fff;
    width: 100vw;
    left: 0;
    padding: 0 1rem;
    box-shadow: 0 1px 1px #424040;
    z-index: 100;
}

/* Main content styles */
main {
    background-color: #424040;
    /* Make main element take up all surplus space to push footer to the bottom */
    flex: 1 0 auto;
}

.light-bg {
    background-color: #fff;
    color: #424040;
}

.scroll-down {
    text-align: right;
}

/* Intro section */
#intro-container {
    max-width: 424px;
    position: relative;
    margin: auto;
    height: 100vh;
    background-image: url(../images/friedrich-zawrel-1978.jpg);
    background-attachment: fixed;
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center 38px;
    box-shadow: 0 1px 1px #424040;
}

#intro-text {
    position: absolute;
    background-color: rgba(0, 0, 0, .6);
    text-align: justify;
    width: 300px;
    height: 300px;
    padding: 1rem;
    bottom: 20%;
}

#intro-text>h2 {
    display: none;
}

/* Childhood section */
#childhood-container {
    position: relative;
    width: 100vw;
    height: 100vh;
    display: flex;
    justify-content: space-around;
    align-items: flex-start;
    flex-wrap: wrap;
    background-image: url(../images/hitler-youth-fog-bg.png);
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center 0px;
    box-shadow: 0 1px 1px #424040;

}

#childhood-container h2 {
    flex-basis: 100%;
    text-shadow: 0 0 6px #fff;
    background-image: linear-gradient(white, #d0d0d0);
    padding: 1rem;
    margin: 0rem 0px 2rem;

}

#childhood-container div {
    background-color: rgba(255, 255, 255, 0.6);
    text-align: justify;
    width: 300px;
    height: 300px;
    padding: 1rem;
    margin: 0rem 10px 2rem;
    border-radius: 5px;
    z-index: 50;
}

#childhood-text-1 {
    order: 1;
}

#childhood-text-2 {
    order: 3;
}

/* Spiegelgrund section */
#spiegelgrund-container {
    position: relative;
    margin: auto;
    height: 100vh;
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    flex-wrap: wrap;
    background-image: url(../images/am-spiegelgrund-hallway.jpg);
    background-attachment: fixed;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    box-shadow: 0 1px 1px #424040;

}

#spiegelgrund-text {
    background-color: rgba(0, 0, 0, .6);
    text-align: justify;
    width: 300px;
    height: 400px;
    padding: 1rem;
    bottom: 20%;
}

#spiegelgrund-info {
    display: flex;
    justify-content: space-around;
    align-items: flex-start;
    flex-wrap: wrap;
}

#spiegelgrund-info-text {
    position: relative;
    background-color: rgba(255, 255, 255, 0.9);
    color: #424040;
    text-align: justify;
    width: 300px;
    height: 300px;
    padding: 1rem;
    border: 1px solid #424040;
    border-radius: 5px;
    margin: 2rem auto;
}

#spiegelhof-img {
    margin: auto;
    padding-bottom: 30px;
}

figcaption {
    margin: 0 auto;
    text-align: center;
}

#spiegelhof-img>figure>img {
    display: block;
    width: 300px;
    margin: 0 auto;
}

/* Meeting Gross section */
#meeting-gross-container {
    display: flex;
    justify-content: space-around;
    align-items: flex-start;
    flex-wrap: wrap;

}

#meeting-gross-text h2 {
    margin-left: 0px;
    margin-right: 0px;
    margin-top: 1rem;
    text-align: left;
}

#meeting-gross-text {

    background-color: #424040;
    color: #fff;
    text-align: justify;
    padding: 1rem;
    width: 100%;
    margin: 1rem 10px;
    border-radius: 5px;
}

/* Form */
#guestbook-form {
    position: relative;
    top: 0px;
    
}

#guestbook-form p {
    padding-left: 1rem;
}

#guestbook-form a {
    color: #F2F2F2;
}

#form {
    display: flex;
    flex-wrap: wrap;
    margin: 1rem 1rem 80px;
}

label {
    display:block;
    margin-top: 5px;
}
.id {
    margin: 5px 0;
    padding: 5px;
}

textarea {
    width: 80vw;
    margin: 5px 0;
}

input[type=submit] {
    padding: 5px;
    font-family: Inconsolata, monospace;
}

/* Footer styles */
footer {
    position: fixed;
    bottom: 0;
    width: 100vw;
    background-color: #F2F2F2;
    color: #424040;
    z-index: 99;
}

#socials {
    display: flex;
    justify-content: flex-end;
    font-size: 110%;
    letter-spacing: 2px;
    list-style-type: none;
    padding-top: 8px;
}

#socials>li {
    margin-bottom: 0.7rem;
    padding-right: 1rem;
}


/*Media query: (640px and up) */
@media screen and (min-width: 640px) {

    #childhood-container {
        height: 900px;

    }

    #childhood-container #childhood-h2 {
        display: flex;
        flex-basis: 100%;
        flex-direction: row;
        min-width: 300px;
        flex-grow: 0;
    }

    #childhood-text-1 {
        position: relative;
        top: -220px;
        order: 3;
    }

    #childhood-text-2 {
        position: relative;
        top: 0px;
        order: 1;
    }
}

/* Media query: tablets and larger (768px and up) */
@media screen and (min-width: 768px) {

    #intro-container {
        min-width: 100%;
        max-width: 100%;
        background-image: url(../images/friedrich-zawrel-1978-zeitung.jpg);
        background-size: cover;

    }

    #intro-text {
        width: 370px;
        height: 300px;
        padding: 2rem 3rem 3rem 2rem;
        bottom: 30%;
    }


}

/* Media query: laptops and larger (1024px and up) */
@media screen and (min-width: 1024px) {

    #intro-container {
        max-width: 1023px;
        background-size: contain;
        background-position-x: 25vw;
    }


    #intro-text {

        width: 420px;
        height: 300px;
        padding: 3rem 4rem 4rem 2rem;
        margin-left: 20%;
    }

}

/* 
/* Media query: desktops (1044px and up) */
@media screen and (min-width: 1044px) {

    #intro-container {
        background-position-x: 25vw;
    }

    #intro-text {
        margin-left: 20%;
    }

}

